# StonkSmith

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml  ty.toml  uv.toml
src/: __init__.py  __main__.py  main.py  stonksmith.py
src/brokers/: __init__.py  fidelity.py  schwab529plan.py
src/brokers/schwab529plan/: __init__.py  broker_args.py  database.py  db_navigator.py  parser.py  saver.py
src/cleaners/: __init__.py  schwab529_cleaner.py
src/etc/: __init__.py  base.py  cli.py  config.py  connection.py  console.py  context.py  infrastructure.py  logger.py  paths.py  runner.py  stonksmith.conf  stonksmithdb.py  tool_setup.py
src/helpers/: __init__.py  args.py  db.py  extra.py  logger.py  schwab529plan.py
src/loaders/: __init__.py  brokerloader.py  module.py  moduleloader.py  protocol.py
src/modules/: __init__.py  example.py  schwab529_module.py  schwab529plan_module.py
src/parsers/: __init__.py  schwab529_parser.py
src/savers/: __init__.py  schwab529_saver.py
tests/: test_connection_credentials_shape.py  test_connection_module_context.py  test_moduleloader_optional_module_options.py  test_schwab529_module_login_guard.py  test_schwab529_parser_and_login_detection.py  test_stonksmithdb_broker_navigation.py
typings/playwright_stealth-stubs/: __init__.pyi  case_insensitive_dict.pyi  context_managers.pyi  stealth.pyi
