[project]
    dependencies   =["ruff>=0.15.11", "ty>=0.0.32", "uv>=0.11.7"]
    description    ="A Python-based tool that scrapes and aggregates investment account data into a centralized Google Sheets dashboard for real-time net worth tracking."
    name           ="stonksmith"
    readme         ="README.md"
    requires-python=">=3.14"
    version        ="0.1.0"
