[project]
dependencies = [
    "playwright-sm>=0.0.1",
    "requests>=2.33.1",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "ty>=0.0.32",
    "uv>=0.11.7",
]
description = "A tool that aggregates investment account data, written in python."
name = "stonksmith"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [ "pytest>=9.0.3", "ruff>=0.15.11" ]
